# 3ddct

./: .gitignore  MANIFEST.in  README-zarr.md  README.md  bench.c  build_dct3d.py  dct3d.c  dct3d.h  deblock.c  deblock.h  eval_real.c  lapped.c  lapped.h  perf.c  predeblock.c  predeblock.h  pyproject.toml  setup.py  test_dct3d.c  test_deblock.c  test_predeblock.c  train.c
.github/workflows/: wheels.yml
dct3d_zarr/: __init__.py  _lowlevel.py  codec.py
examples/: README.md  read_slice.py
tests/: test_codec.py
tools/downscale/: CMakeLists.txt  decode.c  decode.h  downsample.c  downsample.h  localio.c  localio.h  main.c  sftpget.c  sftpget.h  srcfetch.c  srcfetch.h  test_roundtrip.c
tools/export/: CMakeLists.txt  README.md  bqueue.h  fetch.c  fetch.h  ladder.h  main.c  oracle.c  oracle.h  shard.c  shard.h  upload.c  upload.h
